# pkg/models/task.go
@@ -17,6 +17,7 @@ type TaskRequest struct {
 
 type Task struct {
 	Uid         string            `json:"uid" bson:"uid"`
+	Inventory   Inventory         `json:"inventory"`
 	State       string            `json:"state" bson:"state"`
 	CreatedTime time.Time         `json:"created_time"`
 	Args        map[string]string `json:"args"`
@@ -29,12 +30,13 @@ func (t Task) MarshalBinary() (data []byte, err error) {
 }
 
 type Result struct {
-	StartTime time.Time `json:"start_time"`
-	EndTime   time.Time `json:"end_time" `
-	Message   string    `json:"message"`
-	Success   bool      `json:"success"`
-	Stdout    string    `json:"stdout"`
-	Logfile   string    `json:"logfile"`
+	StartTime time.Time   `json:"start_time"`
+	EndTime   time.Time   `json:"end_time" `
+	Message   string      `json:"message"`
+	Success   bool        `json:"success"`
+	Stdout    string      `json:"stdout"`
+	Content   interface{} `json:"content"`
+	Logfile   string      `json:"logfile"`
 }
 
 func (r Result) MarshalBinary() (data []byte, err error) {
